--- a/style.css
+++ b/style.css
@@ -25,8 +25,28 @@ body {
   justify-content: center;
   margin-left: 60px;
   align-items: center;
+  margin-bottom: 100px;
 }
 .details {
   margin-left: 120px;
   margin-right: 50px;
+}
+.part-3 h1 {
+  margin-bottom: 50px;
+  margin-left: 50px;
+}
+.square {
+  border: 3px solid red;
+  width: 450px;
+  padding: 15px;
+  margin: 15px 15px 15px 15px;
+}
+.marvel {
+  display: flex;
+  margin-bottom: 50px;
+}
+footer {
+  font-size: small;
+  font-weight: 100px;
+  margin-left: 20px;
 }
